# simulation

.devcontainer/: devcontainer.json
simulation/: .env  Normales_F.csv  README.md  pyproject.toml  report.md  requirements.txt
simulation/src/simulation/: Bank_transaction.csv  Fraude.csv  Normales.csv  Transactions_references.csv  main.py
simulation/src/simulation/Crews/Scenario1/: crew.py
simulation/src/simulation/Crews/Scenario1/config/: agents.yaml  tasks.yaml
simulation/src/simulation/Crews/Scenario2/: crew.py
simulation/src/simulation/Crews/Scenario2/config/: agents.yaml  tasks.yaml
simulation/src/simulation/tools/: custom_tool.py
