[project]
name = "simulation"
version = "0.1.0"
description = "Simulation using crewAI"
authors = [{ name = "Assane Gassama", email = "assane.gassama@univ-thies.sn" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
simulation = "simulation.main:run"
simulation = "simulation.main:Run"
run_crew = "simulation.main:run"
train = "simulation.main:train"
replay = "simulation.main:replay"
test = "simulation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
